# fortran-parallel-examples

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml  oneapi-linux.yml
cmake/: FindOpenMP.cmake  compilers.cmake  f202x_do_concurrent.cmake
do_concurrent/: do_concurrent_reduction.f90
openacc/: CMakeLists.txt  openacc_async.f90  simple_openacc.f90
openmp/: CMakeLists.txt  jacobi_openmp.f90  openmp_time_precision.f90
